Docker Compose
Fully functional and now working with docker compose
